kubernetes/home/foundation/emqx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: emqx-operator-system
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
