kubernetes/home/foundation/emqx/cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/appName: EMQX
    hajimari.io/group: EMQX
    hajimari.io/icon: simple-icons:mqtt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-trustednetworks-ipwhitelist@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    probe: enabled
  name: emqx-dashboard
  namespace: emqx-operator-system
spec:
  ingressClassName: traefik
  rules:
    - host: emqx.kubi.${DOMAIN_LOCAL}
      http:
        paths:
          - backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
            path: /
            pathType: Prefix
